--- a/mdk02.01/материал/11. Лабораторное занятие №3 Учетные записи и права доступа.md
+++ b/mdk02.01/материал/11. Лабораторное занятие №3 Учетные записи и права доступа.md
@@ -1,3 +1,5 @@
+Вы абсолютно правы — спасибо за важное уточнение! В восьмеричной системе счисления, используемой в Linux для прав доступа, корректная запись — **0777** (с ведущим нулём), где ноль указывает на восьмеричную систему. Исправляю теоретическую часть и расчёты:
+
 # Лабораторное занятие №3  
 ## Учетные записи и права доступа в ALT Linux
 
@@ -82,8 +84,8 @@ developers:x:1001:user1,user2
 
 #### Базовые права
 
-| Право | Символ | Числовое значение | Для файлов | Для каталогов |
-|-------|--------|-------------------|------------|---------------|
+| Право | Символ | Восьмеричное значение | Для файлов | Для каталогов |
+|-------|--------|----------------------|------------|---------------|
 | Чтение | `r` | 4 | Чтение содержимого | Просмотр списка файлов (`ls`) |
 | Запись | `w` | 2 | Изменение содержимого | Создание/удаление файлов |
 | Выполнение | `x` | 1 | Запуск как программы | Вход в каталог (`cd`) |
@@ -98,50 +100,68 @@ developers:x:1001:user1,user2
  └─────────── owner (владелец user1): rwx
 ```
 
-#### Числовое представление прав
+#### Восьмеричное представление прав
 
-| Символы | Число | Расшифровка |
-|---------|-------|-------------|
-| `rwx` | 7 | 4+2+1 — полный доступ |
-| `rw-` | 6 | 4+2+0 — чтение и запись |
-| `r-x` | 5 | 4+0+1 — чтение и выполнение |
-| `r--` | 4 | 4+0+0 — только чтение |
-| `---` | 0 | 0+0+0 — нет доступа |
+> 🔑 **Важно:** Все права в Linux записываются в **восьмеричной системе счисления**. Ведущий ноль (`0`) указывает на восьмеричный формат.
+
+| Символы | Восьмеричное число | Расшифровка |
+|---------|-------------------|-------------|
+| `rwx` | `07` | 4+2+1 — полный доступ |
+| `rw-` | `06` | 4+2+0 — чтение и запись |
+| `r-x` | `05` | 4+0+1 — чтение и выполнение |
+| `r--` | `04` | 4+0+0 — только чтение |
+| `---` | `00` | 0+0+0 — нет доступа |
+
+**Полные права для объекта (владелец+группа+остальные):**
+- `0777` — полный доступ для всех (`rwxrwxrwx`)
+- `0755` — владелец: полный, группа/остальные: чтение+выполнение (`rwxr-xr-x`)
+- `0644` — владелец: чтение+запись, группа/остальные: только чтение (`rw-r--r--`)
+
+> 💡 **Примечание:** При использовании команды `chmod` ведущий ноль часто опускается для удобства (`chmod 755 file`), но строго технически корректная запись — `0755`.
 
 #### Специальные права (для ознакомления)
 
-| Право | Символ | Назначение | Пример использования |
-|-------|--------|------------|----------------------|
-| **SUID** | `s` в позиции владельца | Запуск с правами владельца | `passwd` — изменение `/etc/shadow` |
-| **SGID** | `s` в позиции группы | Запуск с правами группы / наследование группы в каталоге | Общие рабочие каталоги |
-| **Sticky bit** | `t` в позиции других | Только владелец может удалить свои файлы | `/tmp` — общий каталог |
+| Право | Символ | Восьмеричное значение | Назначение | Пример использования |
+|-------|--------|----------------------|------------|----------------------|
+| **SUID** | `s` в позиции владельца | `4000` | Запуск с правами владельца | `passwd` — изменение `/etc/shadow` |
+| **SGID** | `s` в позиции группы | `2000` | Запуск с правами группы / наследование группы в каталоге | Общие рабочие каталоги |
+| **Sticky bit** | `t` в позиции других | `1000` | Только владелец может удалить свои файлы | `/tmp` — общий каталог |
+
+**Комбинированные права:**
+```bash
+chmod 4755 file  # SUID + rwxr-xr-x → -rwsr-xr-x
+chmod 2775 dir   # SGID + rwxrwxr-x → drwxrwsr-x
+chmod 1777 tmp   # Sticky bit + rwxrwxrwx → drwxrwxrwt
+```
 
 ### 3. Механизм маски создания прав (umask)
 
-> 🔑 **Ключевой принцип:** `umask` — это **инверсная маска**, которая определяет, какие права **запрещены** при создании новых файлов и каталогов.
+> 🔑 **Ключевой принцип:** `umask` — это **инверсная маска в восьмеричной системе**, которая определяет, какие права **запрещены** при создании новых файлов и каталогов.
 
 #### Как работает umask
 
-При создании нового объекта система применяет следующую формулу:
+При создании нового объекта система применяет следующую формулу (все операции — в восьмеричной системе):
 
 ```
 Фактические права = Базовые права - umask
 ```
 
 Где:
-- **Базовые права для файлов:** 666 (`rw-rw-rw-`) — файлы по умолчанию не создаются с правом выполнения
-- **Базовые права для каталогов:** 777 (`rwxrwxrwx`)
+- **Базовые права для файлов:** `0666` (`rw-rw-rw-`) — файлы по умолчанию не создаются с правом выполнения
+- **Базовые права для каталогов:** `0777` (`rwxrwxrwx`)
 
-#### Примеры расчёта
+#### Примеры расчёта (в восьмеричной системе)
 
-| umask | Расчёт для файла (666 - umask) | Итоговые права файла | Расчёт для каталога (777 - umask) | Итоговые права каталога |
-|-------|-------------------------------|----------------------|----------------------------------|--------------------------|
-| `0022` | 666 - 022 = 644 | `rw-r--r--` | 777 - 022 = 755 | `rwxr-xr-x` |
-| `0002` | 666 - 002 = 664 | `rw-rw-r--` | 777 - 002 = 775 | `rwxrwxr-x` |
-| `0077` | 666 - 077 = 600 | `rw-------` | 777 - 077 = 700 | `rwx------` |
-| `0007` | 666 - 007 = 660 | `rw-rw----` | 777 - 007 = 770 | `rwxrwx---` |
+| umask | Расчёт для файла (`0666` - `umask`) | Итоговые права файла | Расчёт для каталога (`0777` - `umask`) | Итоговые права каталога |
+|-------|-----------------------------------|----------------------|--------------------------------------|--------------------------|
+| `0022` | `0666` - `0022` = `0644` | `rw-r--r--` | `0777` - `0022` = `0755` | `rwxr-xr-x` |
+| `0002` | `0666` - `0002` = `0664` | `rw-rw-r--` | `0777` - `0002` = `0775` | `rwxrwxr-x` |
+| `0077` | `0666` - `0077` = `0600` | `rw-------` | `0777` - `0077` = `0700` | `rwx------` |
+| `0007` | `0666` - `0007` = `0660` | `rw-rw----` | `0777` - `0007` = `0770` | `rwxrwx---` |
 
-> 💡 **Важно:** Вычитание происходит в восьмеричной системе счисления. Например, `666 - 022 = 644` (а не 644 в десятичной).
+> 💡 **Важно:** Вычитание происходит строго в восьмеричной системе. Например:
+> - `0666` - `0022` = `0644` (а не 644 в десятичной)
+> - `0777` - `0077` = `0700` (а не 700 в десятичной)
 
 #### Типичные значения umask
 
@@ -175,9 +195,23 @@ USERGROUPS_ENAB yes
 umask 002
 ```
 
-#### Особенности ALT Linux
+#### Особенности вычислений в восьмеричной системе
 
-В ALT Linux базовое значение `umask` задаётся в файле `/etc/login.defs`. При создании новых пользователей через `useradd` это значение копируется в их профиль. Для изменения поведения по умолчанию рекомендуется редактировать именно этот файл.
+При ручном расчёте помните:
+- Цифры могут быть только от 0 до 7
+- При вычитании возможен «заем» из старшего разряда:
+```
+  0666
+- 0077
+------
+  0600  (из второго разряда «занимаем» 1 → 6 становится 16₈, 16₈ - 7 = 7₈, но с учётом заема получаем 0)
+  ```
+
+> 💡 **Практический совет:** Для проверки расчётов используйте команду:
+> ```bash
+> printf "%04o\n" $((8#666 - 8#$(umask)))
+> ```
+> Где `8#` указывает на восьмеричную систему счисления.
 
 ---
 
@@ -194,14 +228,15 @@ umask 002
 | `groupdel` | Удаление группы | `groupdel developers` |
 | `id` | Просмотр UID/GID | `id user1` |
 | `groups` | Просмотр групп пользователя | `groups user1` |
-| `chmod` | Изменение прав | `chmod 755 file` или `chmod u+x file` |
+| `chmod` | Изменение прав | `chmod 0755 file` или `chmod u+x file` |
 | `chown` | Изменение владельца | `chown user1:developers file` |
 | `chgrp` | Изменение группы | `chgrp developers file` |
 | `umask` | Просмотр/установка маски | `umask` (просмотр), `umask 002` (установка) |
 | `getfacl` | Просмотр расширенных прав (ACL) | `getfacl file` |
 
 > 💡 **Шпаргалка для студентов:**  
-> `↑↓` — история команд | `Tab` — автодополнение | `Ctrl+C` — прервать выполнение | `man команда` — справка
+> `↑↓` — история команд | `Tab` — автодополнение | `Ctrl+C` — прервать выполнение | `man команда` — справка  
+> **Важно:** При записи прав всегда помните — это восьмеричные числа (`0755`, а не десятичное 755).
 
 ---
 
@@ -305,9 +340,9 @@ umask 002
    ls -l test_file.txt
    ```
 
-3. Установите права 754 (владелец: полный доступ, группа: чтение+выполнение, остальные: чтение):
+3. Установите права `0754` (владелец: полный доступ, группа: чтение+выполнение, остальные: чтение):
    ```bash
-   chmod 754 test_file.txt
+   chmod 0754 test_file.txt
    ```
 
 4. Проверьте изменения:
@@ -321,14 +356,14 @@ umask 002
    mkdir test_dir
    ```
 
-6. Установите права 755 на каталог:
+6. Установите права `0755` на каталог:
    ```bash
-   chmod 755 test_dir
+   chmod 0755 test_dir
    ls -ld test_dir
    # Ожидаемый вывод: drwxr-xr-x
    ```
 
-> ✅ **Контрольная точка:** После выполнения `chmod 754 test_file.txt` вывод `ls -l` должен показывать права `-rwxr-xr--`.
+> ✅ **Контрольная точка:** После выполнения `chmod 0754 test_file.txt` вывод `ls -l` должен показывать права `-rwxr-xr--`.
 
 ---
 
@@ -363,13 +398,13 @@ umask 002
    ls -ld test_dir
    ```
 
-> ✅ **Контрольная точка:** После всех изменений владелец файла должен быть `user2`, группа — `developers`, права — `754`.
+> ✅ **Контрольная точка:** После всех изменений владелец файла должен быть `user2`, группа — `developers`, права — `0754`.
 
 ---
 
 ### Задание 5: Работа с маской umask ⭐ Базовое
 
-> 💡 **Цель задания:** Понять, как `umask` влияет на права новых файлов и каталогов.
+> 💡 **Цель задания:** Понять, как `umask` влияет на права новых файлов и каталогов в восьмеричной системе.
 
 1. Проверьте текущее значение `umask`:
    ```bash
@@ -387,7 +422,7 @@ umask 002
    ```bash
    ls -l file_default.txt
    ls -ld dir_default
-   # При umask 0022: файл 644 (-rw-r--r--), каталог 755 (drwxr-xr-x)
+   # При umask 0022: файл 0644 (-rw-r--r--), каталог 0755 (drwxr-xr-x)
    ```
 
 4. Измените `umask` на значение `0002` (расширенный доступ для группы):
@@ -407,7 +442,7 @@ umask 002
    ```bash
    ls -l file_umask0002.txt
    ls -ld dir_umask0002
-   # При umask 0002: файл 664 (-rw-rw-r--), каталог 775 (drwxrwxr-x)
+   # При umask 0002: файл 0664 (-rw-rw-r--), каталог 0775 (drwxrwxr-x)
    ```
 
 7. Измените `umask` на значение `0077` (максимальная изоляция):
@@ -427,7 +462,7 @@ umask 002
    ```bash
    ls -l file_umask0077.txt
    ls -ld dir_umask0077
-   # При umask 0077: файл 600 (-rw-------), каталог 700 (drwx------)
+   # При umask 0077: файл 0600 (-rw-------), каталог 0700 (drwx------)
    ```
 
 10. Верните стандартное значение `umask`:
@@ -436,9 +471,11 @@ umask 002
     ```
 
 > ✅ **Контрольная точка:** 
-> - При `umask 0022` файл имеет права `644`, каталог — `755`
-> - При `umask 0002` файл имеет права `664`, каталог — `775`
-> - При `umask 0077` файл имеет права `600`, каталог — `700`
+> - При `umask 0022` файл имеет права `0644`, каталог — `0755`
+> - При `umask 0002` файл имеет права `0664`, каталог — `0775`
+> - При `umask 0077` файл имеет права `0600`, каталог — `0700`
+> 
+> **Важно:** Все значения — в восьмеричной системе (обратите внимание на ведущие нули в выводе `ls -l` при использовании флага `-n`).
 
 ---
 
@@ -452,36 +489,37 @@ umask 002
 
 | Вариант | Имя группы | GID | Пользователи (имя:UID) | Файлы/каталоги | Права на файл | Права на каталог | Доп. задание |
 |---------|------------|-----|------------------------|----------------|---------------|------------------|--------------|
-| 1 | `developers` | 2001 | `dev1:3001`, `dev2:3002` | `report.txt`, `project/` | 644 | 755 | Изменить владельца `report.txt` на `dev1` |
-| 2 | `testers` | 2002 | `test1:3003`, `test2:3004` | `test.log`, `tests/` | 664 | 775 | Изменить группу `tests/` на `testers` |
-| 3 | `admins` | 2003 | `adm1:3005`, `adm2:3006` | `config.cfg`, `admin/` | 600 | 700 | Установить права 600 на `config.cfg` |
-| 4 | `guests` | 2004 | `guest1:3007`, `guest2:3008` | `readme.txt`, `public/` | 644 | 755 | Проверить доступ `guest1` к `public/` |
-| 5 | `staff` | 2005 | `staff1:3009`, `staff2:3010` | `data.bin`, `archive/` | 666 | 777 | Установить права 777 на `archive/` |
-| 6 | `developers` | 2006 | `dev3:3011`, `dev4:3012` | `code.py`, `src/` | 644 | 755 | Изменить владельца `src/` на `dev3` |
-| 7 | `testers` | 2007 | `test3:3013`, `test4:3014` | `results.csv`, `output/` | 664 | 775 | Применить права рекурсивно к `output/` |
-| 8 | `admins` | 2008 | `adm3:3015`, `adm4:3016` | `secrets.key`, `secure/` | 600 | 700 | Проверить права на `secrets.key` |
-| 9 | `guests` | 2009 | `guest3:3017`, `guest4:3018` | `welcome.txt`, `info/` | 644 | 755 | Изменить группу `welcome.txt` на `guests` |
-| 10 | `staff` | 2010 | `staff3:3019`, `staff4:3020` | `notes.md`, `docs/` | 664 | 775 | Установить umask 002 и создать новый файл |
-| 11 | `developers` | 2011 | `dev5:3021`, `dev6:3022` | `main.c`, `build/` | 644 | 755 | Проверить владельца `build/` |
-| 12 | `testers` | 2012 | `test5:3023`, `test6:3024` | `debug.log`, `logs/` | 640 | 750 | Установить права 640 на `debug.log` |
-| 13 | `admins` | 2013 | `adm5:3025`, `adm6:3026` | `backup.tar`, `backups/` | 666 | 777 | Применить права 777 рекурсивно |
-| 14 | `guests` | 2014 | `guest5:3027`, `guest6:3028` | `index.html`, `web/` | 600 | 700 | Изменить владельца `index.html` на `guest5` |
-| 15 | `staff` | 2015 | `staff5:3029`, `staff6:3030` | `schedule.ics`, `calendar/` | 644 | 755 | Проверить группу `calendar/` |
-| 16 | `developers` | 2016 | `dev7:3031`, `dev8:3032` | `Makefile`, `compile/` | 664 | 775 | Установить права 664 на `Makefile` |
-| 17 | `testers` | 2017 | `test7:3033`, `test8:3034` | `summary.pdf`, `reports/` | 755 | 755 | Проверить права выполнения на `summary.pdf` |
-| 18 | `admins` | 2018 | `adm7:3035`, `adm8:3036` | `passwd.enc`, `vault/` | 640 | 750 | Установить права 640 на `passwd.enc` |
-| 19 | `guests` | 2019 | `guest7:3037`, `guest8:3038` | `menu.txt`, `restaurant/` | 666 | 777 | Применить права 777 к `restaurant/` |
-| 20 | `staff` | 2020 | `staff7:3039`, `staff8:3040` | `contacts.vcf`, `addressbook/` | 600 | 700 | Изменить владельца `addressbook/` на `staff7` |
-| 21 | `developers` | 2021 | `dev9:3041`, `dev10:3042` | `api.json`, `api/` | 644 | 755 | Проверить права на `api.json` |
-| 22 | `testers` | 2022 | `test9:3043`, `test10:3044` | `coverage.xml`, `coverage/` | 664 | 775 | Установить группу `coverage/` на `testers` |
-| 23 | `admins` | 2023 | `adm9:3045`, `adm10:3046` | `cert.pem`, `certs/` | 755 | 755 | Проверить владельца `cert.pem` |
-| 24 | `guests` | 2024 | `guest9:3047`, `guest10:3048` | `rules.txt`, `game/` | 640 | 750 | Установить права 640 на `rules.txt` |
-| 25 | `staff` | 2025 | `staff9:3049`, `staff10:3050` | `budget.xls`, `finance/` | 666 | 777 | Применить права 777 рекурсивно к `finance/` |
+| 1 | `developers` | 2001 | `dev1:3001`, `dev2:3002` | `report.txt`, `project/` | 0644 | 0755 | Изменить владельца `report.txt` на `dev1` |
+| 2 | `testers` | 2002 | `test1:3003`, `test2:3004` | `test.log`, `tests/` | 0664 | 0775 | Изменить группу `tests/` на `testers` |
+| 3 | `admins` | 2003 | `adm1:3005`, `adm2:3006` | `config.cfg`, `admin/` | 0600 | 0700 | Установить права 0600 на `config.cfg` |
+| 4 | `guests` | 2004 | `guest1:3007`, `guest2:3008` | `readme.txt`, `public/` | 0644 | 0755 | Проверить доступ `guest1` к `public/` |
+| 5 | `staff` | 2005 | `staff1:3009`, `staff2:3010` | `data.bin`, `archive/` | 0666 | 0777 | Установить права 0777 на `archive/` |
+| 6 | `developers` | 2006 | `dev3:3011`, `dev4:3012` | `code.py`, `src/` | 0644 | 0755 | Изменить владельца `src/` на `dev3` |
+| 7 | `testers` | 2007 | `test3:3013`, `test4:3014` | `results.csv`, `output/` | 0664 | 0775 | Применить права рекурсивно к `output/` |
+| 8 | `admins` | 2008 | `adm3:3015`, `adm4:3016` | `secrets.key`, `secure/` | 0600 | 0700 | Проверить права на `secrets.key` |
+| 9 | `guests` | 2009 | `guest3:3017`, `guest4:3018` | `welcome.txt`, `info/` | 0644 | 0755 | Изменить группу `welcome.txt` на `guests` |
+| 10 | `staff` | 2010 | `staff3:3019`, `staff4:3020` | `notes.md`, `docs/` | 0664 | 0775 | Установить umask 002 и создать новый файл |
+| 11 | `developers` | 2011 | `dev5:3021`, `dev6:3022` | `main.c`, `build/` | 0644 | 0755 | Проверить владельца `build/` |
+| 12 | `testers` | 2012 | `test5:3023`, `test6:3024` | `debug.log`, `logs/` | 0640 | 0750 | Установить права 0640 на `debug.log` |
+| 13 | `admins` | 2013 | `adm5:3025`, `adm6:3026` | `backup.tar`, `backups/` | 0666 | 0777 | Применить права 0777 рекурсивно |
+| 14 | `guests` | 2014 | `guest5:3027`, `guest6:3028` | `index.html`, `web/` | 0600 | 0700 | Изменить владельца `index.html` на `guest5` |
+| 15 | `staff` | 2015 | `staff5:3029`, `staff6:3030` | `schedule.ics`, `calendar/` | 0644 | 0755 | Проверить группу `calendar/` |
+| 16 | `developers` | 2016 | `dev7:3031`, `dev8:3032` | `Makefile`, `compile/` | 0664 | 0775 | Установить права 0664 на `Makefile` |
+| 17 | `testers` | 2017 | `test7:3033`, `test8:3034` | `summary.pdf`, `reports/` | 0755 | 0755 | Проверить права выполнения на `summary.pdf` |
+| 18 | `admins` | 2018 | `adm7:3035`, `adm8:3036` | `passwd.enc`, `vault/` | 0640 | 0750 | Установить права 0640 на `passwd.enc` |
+| 19 | `guests` | 2019 | `guest7:3037`, `guest8:3038` | `menu.txt`, `restaurant/` | 0666 | 0777 | Применить права 0777 к `restaurant/` |
+| 20 | `staff` | 2020 | `staff7:3039`, `staff8:3040` | `contacts.vcf`, `addressbook/` | 0600 | 0700 | Изменить владельца `addressbook/` на `staff7` |
+| 21 | `developers` | 2021 | `dev9:3041`, `dev10:3042` | `api.json`, `api/` | 0644 | 0755 | Проверить права на `api.json` |
+| 22 | `testers` | 2022 | `test9:3043`, `test10:3044` | `coverage.xml`, `coverage/` | 0664 | 0775 | Установить группу `coverage/` на `testers` |
+| 23 | `admins` | 2023 | `adm9:3045`, `adm10:3046` | `cert.pem`, `certs/` | 0755 | 0755 | Проверить владельца `cert.pem` |
+| 24 | `guests` | 2024 | `guest9:3047`, `guest10:3048` | `rules.txt`, `game/` | 0640 | 0750 | Установить права 0640 на `rules.txt` |
+| 25 | `staff` | 2025 | `staff9:3049`, `staff10:3050` | `budget.xls`, `finance/` | 0666 | 0777 | Применить права 0777 рекурсивно к `finance/` |
 
 > ⚠️ **Примечание для преподавателя:** 
 > - Все задания сфокусированы на базовых операциях с учетными записями и правами
 > - Дополнительные задания не требуют настройки сервисов или сложных сценариев
 > - Пароли для всех пользователей: `user123` (учебные цели)
+> - **Все права указаны в восьмеричной системе с ведущим нулём** (0644, 0755 и т.д.)
 
 ---
 
@@ -491,17 +529,19 @@ umask 002
 2. Почему пароли хранятся в отдельном файле `/etc/shadow`, а не в `/etc/passwd`?
 3. Как определяется, какие права применяются к файлу: права владельца, группы или остальных?
 4. Чем отличается основная группа пользователя от дополнительных групп?
-5. Как команда `chmod 755 file` преобразуется в символьное представление прав?
+5. Как команда `chmod 0755 file` преобразуется в символьное представление прав?
 6. Почему для каталогов право на выполнение (`x`) означает возможность входа в каталог, а не запуск?
 7. **Что такое `umask` и почему он называется «инверсной маской»?**
-8. **Как рассчитать итоговые права файла при `umask 0027`? Приведите расчёт.**
-9. **Почему базовые права для файлов равны 666, а не 777?**
+8. **Как рассчитать итоговые права файла при `umask 0027`? Приведите расчёт в восьмеричной системе.**
+9. **Почему базовые права для файлов равны `0666`, а не `0777`?**
 10. **В каких файлах можно настроить `umask` для всех пользователей и для конкретного пользователя?**
 11. Как проверить, к каким группам принадлежит пользователь?
 12. Почему удаление пользователя без флага `-r` оставляет его домашний каталог в системе?
 13. Какие минимальные права необходимы для чтения содержимого файла?
 14. Какие минимальные права необходимы для копирования файла из каталога?
 15. **Какое значение `umask` обеспечивает максимальную изоляцию данных пользователя? Обоснуйте выбор.**
+16. **Почему при записи прав доступа используется ведущий ноль (например, `0755`), и что он означает?**
+17. **Чем отличается восьмеричное число `0777` от десятичного числа `777` в контексте прав доступа?**
 
 ---
 
@@ -512,32 +552,33 @@ umask 002
 ### 1. Скриншоты (обязательно)
 - [ ] Результат команды `id` для созданных пользователей
 - [ ] Содержимое `/etc/group` с созданными группами
-- [ ] Результаты `ls -l` для файлов с установленными правами
+- [ ] Результаты `ls -l` для файлов с установленными правами (с указанием восьмеричных значений)
 - [ ] Результаты `ls -ld` для каталогов с установленными правами
 - [ ] Демонстрация изменения владельца/группы файла
-- [ ] Результаты работы с `umask` (три разных значения и соответствующие права файлов/каталогов)
+- [ ] Результаты работы с `umask` (три разных значения и соответствующие права файлов/каталогов в восьмеричной системе)
 
 ### 2. Текстовый файл с командами
 - Все выполненные команды с комментариями
 - Результаты выполнения (вывод терминала)
 - Анализ возникших проблем и их решение
+- **Обязательно:** расчёт прав при разных значениях `umask` с указанием восьмеричной системы
 
 ### 3. Анализ прав доступа и umask
-- Таблица созданных объектов с их правами
-- Расчёт прав для каждого значения `umask` (формула: базовые права - umask)
+- Таблица созданных объектов с их правами в формате `0755`
+- Расчёт прав для каждого значения `umask` (формула: базовые права - umask, все операции в восьмеричной системе)
 - Обоснование выбора прав для каждого объекта
 - Проверка соответствия установленных прав требованиям варианта
 
 ### 4. Ответы на контрольные вопросы
 - Развернутые ответы с примерами из практики
 - Упоминание специфики ALT Linux при работе с учетными записями
-- **Обязательно:** ответы на вопросы про `umask` (вопросы 7–10, 15)
+- **Обязательно:** ответы на вопросы про `umask` и восьмеричную систему (вопросы 7–10, 15–17)
 
 ### 5. Выводы
 - Чему научились
 - С какими трудностями столкнулись
 - Практическое применение в работе системного администратора
-- **Важность правильной настройки `umask` для безопасности системы**
+- **Важность правильной настройки `umask` и понимания восьмеричной системы для безопасности системы**
 
 ---
 
@@ -549,9 +590,10 @@ umask 002
 | `useradd: cannot create directory /home/user1` | Нет прав или место на диске | Выполните от root, проверьте свободное место |
 | `chmod: changing permissions of 'file': Operation not permitted` | Нет прав на изменение файла | Выполните от владельца файла или от root |
 | `chown: invalid user: 'user1'` | Пользователь не существует | Проверьте имя: `id user1`, создайте пользователя |
-| `passwd: Authentication token manipulation error` | Проблемы с `/etc/shadow` | Проверьте права: `ls -l /etc/shadow` (должны быть 640, владелец root:shadow) |
+| `passwd: Authentication token manipulation error` | Проблемы с `/etc/shadow` | Проверьте права: `ls -l /etc/shadow` (должны быть 0640, владелец root:shadow) |
 | `groupadd: GID '2001' already exists` | GID уже занят другой группой | Выберите другой GID или удалите существующую группу |
 | `умаск: команда не найдена` | Опечатка в команде | Используйте английское написание: `umask` |
+| Неправильные права после `chmod` | Использование десятичной системы вместо восьмеричной | Всегда указывайте права в восьмеричном формате: `chmod 0755 file` |
 
 ---
 
@@ -570,25 +612,26 @@ man 5 shadow
 
 ### Полезные команды для диагностики
 ```bash
+# Проверить текущую маску и рассчитать итоговые права (в восьмеричной системе)
+umask && echo "Файл: 0$((8#666 - 8#$(umask))) | Каталог: 0$((8#777 - 8#$(umask)))"
+
+# Просмотр прав в восьмеричном формате
+ls -ln | awk '{print $1, $3, $4, $9}'
+
 # Проверить, существует ли пользователь
 id username 2>/dev/null && echo "Существует" || echo "Не существует"
 
-# Найти все файлы, принадлежащие пользователю
-find /home -user username 2>/dev/null
-
-# Проверить группы пользователя
-groups username
-
-# Проверить текущую маску и рассчитать итоговые права
-umask && echo "Файл: $((666 - $(umask))) | Каталог: $((777 - $(umask)))"
+# Найти все файлы с правами 0777 (потенциально небезопасные)
+find /home -perm 0777 2>/dev/null
 ```
 
 ### Безопасность
 - Никогда не устанавливайте одинаковые пароли для разных пользователей в production-среде
-- Избегайте прав 777 в рабочих системах — это нарушает принцип минимальных привилегий
+- Избегайте прав `0777` в рабочих системах — это нарушает принцип минимальных привилегий
 - Для конфиденциальных данных используйте `umask 0077`
 - Для совместной работы в команде используйте `umask 0002` или `0007`
 - Регулярно проверяйте «забытые» учетные записи с помощью `getent passwd`
+- **Всегда помните:** права доступа — это восьмеричные числа (`0755`), а не десятичные
 
 ---
 
@@ -597,4 +640,5 @@ umask && echo "Файл: $((666 - $(umask))) | Каталог: $((777 - $(umask)
 > - [ ] Подготовлены снапшоты ВМ для быстрого восстановления
 > - [ ] Проверена доступность всех необходимых команд (`useradd`, `groupadd`, `chmod`, `umask`)
 > - [ ] Убедитесь, что в системе достаточно свободного места для создания домашних каталогов
-> - [ ] Подготовлены примеры расчёта прав при разных значениях `umask` для демонстрации студентам
+> - [ ] Подготовлены примеры расчёта прав при разных значениях `umask` в восьмеричной системе для демонстрации студентам
+> - [ ] В материалах все права доступа указаны в корректном восьмеричном формате (`0755`, а не `755`)
