--- a/mdk02.01/материал/Тема_1.2/лекция№12_Работа_с_файловыми_системами_Часть_1.md
+++ b/mdk02.01/материал/Тема_1.2/лекция№12_Работа_с_файловыми_системами_Часть_1.md
@@ -5,3 +5,180 @@
 
 ## Содержание лекции
 - Файловые системы в ОС «Альт». Поддержка файловых систем. Работа с дисками и разделами в Linux, монтирование файловых систем.
+
+В современных операционных системах, таких как ОС «Альт», файловая система является ключевым компонентом для хранения и управления данными. Понимание принципов работы с файловыми системами необходимо для эффективного администрирования серверов и рабочих станций. В этой лекции будут рассмотрены основные типы файловых систем в ОС «Альт», включая ext4, xfs, vfat и btrfs, которые обеспечивают различные уровни производительности, надежности и совместимости. Будет представлены инструменты для работы с дисками и разделами, такие как fdisk, parted и lsblk, позволяющие создавать, изменять и управлять разделами. Далее будут рассмотрены методы монтирования файловых систем, включая использование команд mount и umount, а также файл /etc/fstab для автоматического монтирования при загрузке системы. Практические примеры работы с файловыми системами будут представлены в лабораторном задании, обеспечивающем практическое закрепление теоретических знаний.
+
+## Файловые системы в ОС «Альт» (25 мин)
+### Поддерживаемые типы
+ОС «Альт» поддерживает несколько типов файловых систем:
+
+| Тип файла | Описание | Использование |
+|-----------|----------|--------------|
+| ext4 | Расширенная файловая система, основана на ext3 | Основное хранилище |
+| xfs | Файловая система высокой производительности | Большие диски и быстродействующие системы |
+| vfat | Файловая система для совместимости с Windows | Обмен данными с Windows |
+| btrfs | Прогрессивная файловая система с поддержкой снимков | Системы, требующие резервного копирования |
+
+### Особенности реализации в «Альт»
+В ОС «Альт» реализована оптимизированная поддержка файловых систем для эффективной работы с различными типами дисков. Основные особенности:
+- Интеграция с systemd для автоматического монтирования
+- Улучшенная поддержка LVM (Logical Volume Manager)
+- Совместимость с файловыми системами, используемыми в других ОС
+
+### Сравнение с Linux-стандартами
+В ОС «Альт» реализованы стандартные механизмы работы с файловыми системами, как в других дистрибутивах Linux. Основные отличия:
+- Специфические пути к утилитам (например, /usr/bin/altfs)
+- Некоторые дополнительные функции в файловой системе
+- Оптимизация для российских стандартов
+
+## Работа с дисками и разделами (30 мин)
+### Утилиты для работы с дисками
+- **fdisk** - утилита для создания и изменения разделов
+- **parted** - более современная утилита с поддержкой больших разделов
+- **lsblk** - отображение информации о блочных устройствах
+- **mount** - монтирование файловых систем
+
+### Создание разделов
+Пример создания раздела с помощью parted:
+
+```bash
+sudo parted /dev/sda
+(parted) mkpart primary ext4 1MB 10GB
+(parted) set 1 boot on
+(parted) quit
+```
+
+### Управление разделами через systemd
+Система может управлять разделами через systemd:
+
+```bash
+# Создание точки монтирования
+sudo systemctl start mount@/mnt/data.mount
+# Отключение монтирования
+sudo systemctl stop mount@/mnt/data.mount
+```
+
+### Управление размером разделов
+Изменение размера раздела:
+
+```bash
+# Увеличение размера раздела
+sudo parted /dev/sda resizepart 1 20GB
+# Уменьшение размера раздела
+sudo parted /dev/sda resizepart 1 8GB
+```
+
+## Монтирование файловых систем (35 мин)
+### Основные команды
+- **mount** - монтирование файловой системы
+- **umount** - отмонтирование файловой системы
+- **df** - показать информацию о монтированных файловых системах
+
+Пример монтирования:
+
+```bash
+sudo mount -t ext4 /dev/sdb1 /mnt/data
+```
+
+### Файл /etc/fstab
+Файл `/etc/fstab` содержит информацию о том, какие файловые системы должны монтироваться при загрузке системы:
+
+```
+# Формат:
+# <устройство> <точка_монтирования> <тип_файловой_системы> <опции> <0> <0>
+/dev/sdb1  /mnt/data  ext4  defaults  0  2
+```
+
+### Автомонтирование через systemd
+Создание единицы systemd для монтирования:
+
+```bash
+# Создаем файл /etc/systemd/system/mount-data.mount
+[Unit]
+Description=Mount data partition
+
+[Mount]
+What=/dev/sdb1
+Where=/mnt/data
+Type=ext4
+
+[Install]
+WantedBy=multi-user.target
+```
+
+### Управление точками монтирования
+Проверка монтирования:
+
+```bash
+# Проверить, какие файловые системы монтированы
+mount | grep /mnt
+
+# Отмонтировать
+sudo umount /mnt/data
+```
+
+## Практическая часть (15 мин)
+### Лабораторное задание
+1. Создайте раздел на диске:
+   ```bash
+   sudo parted /dev/sda mkpart primary ext4 1GB 2GB
+   ```
+2. Форматируйте раздел:
+   ```bash
+   sudo mkfs.ext4 /dev/sda1
+   ```
+3. Создайте точку монтирования:
+   ```bash
+   sudo mkdir /mnt/data
+   ```
+4. Настройте монтирование в fstab:
+   ```bash
+   echo '/dev/sda1 /mnt/data ext4 defaults 0 2' | sudo tee -a /etc/fstab
+   ```
+5. Проверьте монтирование:
+   ```bash
+   sudo mount -a
+   df -h | grep mnt
+   ```
+
+### Решение типичных проблем при монтировании
+- **Ошибка "mount: /mnt/data: wrong fs type, bad option"**:
+  Проверьте тип файловой системы и правильность опций
+- **Ошибка "mount: /mnt/data: wrong fs type, bad option, bad superblock"**:
+  Возможно, файловая система повреждена или не поддерживается
+
+## Заключение (5 мин)
+### Ключевые моменты
+- Понимание типов файловых систем и их особенностей
+- Умение управлять дисками и разделами
+- Владение методами монтирования файловых систем
+- Навыки решения проблем при работе с файловыми системами
+
+### Рекомендуемая литература
+- Официальная документация ОС «Альт»: https://docs.altlinux.org/
+- Руководство по работе с файловыми системами: https://www.altlinux.org/FileSystems
+
+### Вопросы для обсуждения
+1. В чем разница между ext4 и xfs?
+2. Какие утилиты вы бы рекомендовали для работы с разделами в Linux?
+3. Какие типы ошибок возникают при монтировании файловых систем?
+
+## Чек-лист для самопроверки
+- [ ] Понимание типов файловых систем и их особенностей
+- [ ] Умение управлять дисками и разделами
+- [ ] Владение методами монтирования файловых систем
+- [ ] Навыки решения проблем при работе с файловыми системами
+
+## Глоссарий терминов
+- **Термин**: Определение
+- **Термин**: Определение
+
+## Контрольные вопросы
+1. Опишите основные типы файловых систем в ОС «Альт».
+2. Какие утилиты используются для работы с разделами?
+3. Как настроить монтирование через /etc/fstab?
+
+## Практическое задание на дом
+1. Создайте раздел на диске и выполните монтирование.
+2. Проверьте работу системы через команду mount.
+3. Изучите параметры в файле /etc/fstab и их назначение.
