--- a/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
+++ b/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
@@ -4,6 +4,13 @@
 ---
 
 ### Методические сведения  
+
+Выполнение данной лабораторной работы происходит на развернутых стендах. Схема сети:
+
+
+![схема сети](images/network.jpg)
+
+
 1. **Частные подсети**  
    Частные IP-адреса (серые) используются в локальных сетях и не маршрутизируются в интернете. Примеры диапазонов:  
    - `10.0.0.0/8`  
