--- a/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
+++ b/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
@@ -19,7 +19,8 @@
 
 2. **etcnet**  
    Etcnet
-Более подробно про настройку сети с помощью Etcnet можно почитать тут.
+**Etcnet** — подсистема управления сетевыми интерфейсами в ALT Linux, позволяющая настраивать сетевые параметры через конфигурационные файлы в каталоге `/etc/net/ifaces/`.
+Более подробно про настройку сети с помощью Etcnet можно почитать [тут](https://www.altlinux.org/Etcnet).
 
 Настройки сети могут изменяться либо в ЦУС (модуль Ethernet-интерфейсы), либо напрямую через редактирование файлов /etc/net/ifaces/<интерфейс>.
 
@@ -109,10 +110,10 @@ IP-адрес, маску и шлюз можно изменить команда
 
 ### Задания для выполнения  
 
-#### Часть 1: Настройка сетевого интерфейса на vm1 (ALT Server) через etcnet  
+#### Часть 1: Настройка сетевого интерфейса на isp (ALT Server) через etcnet  
 **Задача:** Назначить статический IP для внутреннего интерфейса и настроить NAT для доступа в интернет.  
 
-1. **Определите интерфейсы на vm1**  
+1. **Определите интерфейсы на isp**  
    ```bash
    ip a
    ```  
@@ -130,7 +131,7 @@ IP-адрес, маску и шлюз можно изменить команда
      systemctl restart network
      ```  
 
-3. **Настройка NAT на vm1**  
+3. **Настройка NAT на isp**  
    - Включите маршрутизацию в `/etc/net/sysctl.conf`:  
      ```bash
      net.ipv4.ip_forward=1
@@ -139,6 +140,10 @@ IP-адрес, маску и шлюз можно изменить команда
      ```bash
      sysctl -p
      ```  
+   - Установка iptables:
+     ```bash
+     apt-get update && apt-get install iptables
+     ```
    - Настройте iptables для NAT:  
      ```bash
      iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
@@ -151,7 +156,7 @@ IP-адрес, маску и шлюз можно изменить команда
 
 ---
 
-#### Часть 2: Настройка сетевого интерфейса на vm2 (ALT Workstation) через nmcli  
+#### Часть 2: Настройка сетевого интерфейса на cli (ALT Workstation) через nmcli  
 **Задача:** Назначить статический IP и настроить шлюз для доступа в интернет.  
 
 1. **Просмотрите активные подключения:**  
@@ -175,25 +180,23 @@ IP-адрес, маску и шлюз можно изменить команда
    ```  
 
 ---
+3. **Настройка сети на server выполняется аналогично isp**
+
+   Для сервера необходимо задать ip-адрес 192.168.1.3/24, так же не забудьте указать параметры шлюза и dns.
+
 
 #### Часть 3: Проверка работоспособности  
 1. **Проверьте связь между машинами:**  
-   - С vm2:  
+   - С Server:  
      ```bash
-     ping 192.168.1.1
+     ping 8.8.8.8
      ```  
-   - С vm1:  
+   - С cli:  
      ```bash
-     ping 192.168.1.2
+     ping 8.8.8.8
      ```  
 
-2. **Проверьте доступ в интернет с vm2:**  
-   ```bash
-   ping 8.8.8.8
-   curl google.com
-   ```  
-
-3. **Проверьте таблицу маршрутизации на vm2:**  
+2. **Проверьте таблицу маршрутизации на Server и cli:**  
    ```bash
    ip route
    ```  
@@ -204,7 +207,7 @@ IP-адрес, маску и шлюз можно изменить команда
 ### Контрольные вопросы  
 1. Какие преимущества имеет статическая адресация перед динамической?  
 2. Для чего используется NAT в данной конфигурации?  
-3. Как проверить таблицу маршрутизации на vm2?  
+3. Как проверить таблицу маршрутизации?
 4. Какая команда позволяет просмотреть активные сетевые подключения через `nmcli`?  
 5. Где хранятся конфигурации NetworkManager?  
 6. Как перезагрузить сетевой интерфейс через `nmcli`?  
